# dmap-talk

./: README.md  notes.md  submission.md
examples/code/: cabal.project  code.cabal  code.nix  default.nix  shell.nix
examples/code/patches/: reflex.cabal.patch
examples/code/src/: DMap.hs  Keys.hs  Notes.hs  Vessel.hs
examples/code/src/DSum/: Example.hs
examples/code/src/Details/: Common.hs  Version1.hs  Version2.hs  Version3.hs  Version4.hs
examples/code/src/Disease/: Common.hs  Version1.hs  Version2.hs
examples/code/src/GADT/: Existential.hs  Phantom.hs  Regular.hs  Win.hs
examples/code/src/GADT/Existential/: GADT.hs
examples/code/src/GADT/Phantom/: GADT.hs
examples/code/src/GADT/Regular/: GADT.hs
examples/configuration/: ChangeLog.md  cabal.project  configuration.cabal
examples/configuration/src/: Scratch.hs
examples/dynamic/: ChangeLog.md  cabal.project  dynamic.cabal
examples/dynamic/src/: Scratch.hs
examples/lgog-digagrams/: ChangeLog.md  default.nix  lgog-diagrams.cabal  lgog-diagrams.nix  shell.nix
examples/lgog-digagrams/src/: Scratch.hs
examples/lgog-digagrams/src/Diagrams/: GG.hs
examples/lgog-digagrams/src/Diagrams/GG/: Load.hs  Render.hs  Types.hs
examples/obv/: default.nix
examples/obv/common/: common.cabal  shell.nix
examples/obv/common/src/Common/: Stuff.hs
examples/obv/common/src/Common/Stuff/: Validate.hs  Widget.hs
examples/obv/frontend/: frontend.cabal
examples/obv/frontend/src/: Frontend.hs
examples/obv/frontend/src/Frontend/: Stuff.hs
examples/obv/frontend/src/Frontend/Stuff/: Widget.hs
examples/obv/patches/: no-tag-classes.patch  reflex-dom-core.cabal.patch
examples/simple/: ChangeLog.md  cabal.project  default.nix  shell.nix  ylj19.cabal  ylj19.nix
examples/simple/src/: Scratch.hs
slides/: default.nix  slides.md  template.revealjs
slides/css/: tweak.css
