name:                dynamic
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Scratch
  build-depends:       base >=4.11 && <4.12
                     , dependent-sum
                     , dependent-sum-template
                     , dependent-map
                     , constraints
                     , constraints-extras
                     , primitive
                     , prim-uniq
                     , errors
  hs-source-dirs:      src
  default-language:    Haskell2010
