name:                lgog-digagrams
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Scratch
                     , Diagrams.GG
                     , Diagrams.GG.Types
                     , Diagrams.GG.Load
                     , Diagrams.GG.Render
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-contrib
                     , SVGFonts
                     , text
                     , foldl
                     , foldl-statistics
                     , dependent-sum
                     , dependent-sum-template
                     , dependent-map
                     , constraints-extras
  hs-source-dirs:      src
  default-language:    Haskell2010
